# python scripts
file(COPY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CFS_BINARY_DIR}/share)
INSTALL(DIRECTORY "${CFS_BINARY_DIR}/share/python" DESTINATION "." USE_SOURCE_PERMISSIONS PATTERN "CMakeFiles" EXCLUDE PATTERN "Makefile" EXCLUDE PATTERN "*.dir" EXCLUDE PATTERN "CTestTestfile.cmake" EXCLUDE)
