IF(USE_XERCES) 
  INCLUDE_DIRECTORIES(${XERCES_INCLUDE_DIR}) 
ENDIF(USE_XERCES) 

IF(USE_LIBXML2)
  INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR}) 
ENDIF(USE_LIBXML2)


IF(USE_CGNS)
  INCLUDE_DIRECTORIES(${CGNS_INCLUDE_DIR})
ENDIF(USE_CGNS)

IF(CFS_BLAS_LAPACK STREQUAL "MKL")
  SET_SOURCE_FILES_PROPERTIES(ProgramOptions.cc
    PROPERTIES COMPILE_FLAGS "-I${MKL_INCLUDE_DIR} -fno-strict-aliasing")
ENDIF(CFS_BLAS_LAPACK STREQUAL "MKL")

SET(DATAINOUT_SRCS 
  ColoredConsole.cc
  PostProc.cc
  ProgramOptions.cc
  ResultHandler.cc
  SimState.cc
  SimInput.cc
  SimOutput.cc
  DefineInOutFiles.cc
)

ADD_LIBRARY(datainout STATIC ${DATAINOUT_SRCS})

SET(TARGET_LL
  simouttext
  simoutinfo
  simoutstreaming
)

LIST(APPEND TARGET_LL
  ${BOOST_PROGRAM_OPTIONS_LIB}
  ${BOOST_FILESYSTEM_LIB}
  ${BOOST_SYSTEM_LIB}
  ${BZIP2_LIBRARY}
  )


IF(USE_XERCES) 
  LIST(APPEND TARGET_LL ${XERCES_LIBRARY}) 
ENDIF(USE_XERCES) 

IF(USE_LIBXML2) 
  LIST(APPEND TARGET_LL ${LIBXML2_LIBRARY}) 
ENDIF(USE_LIBXML2) 

LIST(APPEND TARGET_LL
  ${LAPACK_LIBRARY}
  ${BLAS_LIBRARY}
  ${CFS_FORTRAN_LIBS} )

# ================

IF(USE_HDF5)
  INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
ENDIF(USE_HDF5)

LIST(APPEND TARGET_LL simincdb)

IF(USE_MESH)
  LIST(APPEND TARGET_LL siminmesh)
  LIST(APPEND TARGET_LL internalmesh)
ENDIF(USE_MESH)

IF(USE_GMV)
  LIST(APPEND TARGET_LL siminoutgmv)
ENDIF(USE_GMV)

IF(USE_GMSH)
  LIST(APPEND TARGET_LL siminoutgmsh)
ENDIF(USE_GMSH)

IF(USE_GIDPOST)
  LIST(APPEND TARGET_LL simoutgid)
ENDIF(USE_GIDPOST)

IF(USE_UNV)
  LIST(APPEND TARGET_LL simoutunv)
ENDIF(USE_UNV)

IF(USE_HDF5)
  LIST(APPEND TARGET_LL siminouthdf5)
ENDIF(USE_HDF5)

IF(USE_ANSYSRST)
  LIST(APPEND TARGET_LL simoutansysrst)
ENDIF(USE_ANSYSRST)

IF(USE_COMSOL)
  LIST(APPEND TARGET_LL siminmphtxt)
ENDIF(USE_COMSOL)

IF(USE_CGNS)
  LIST(APPEND TARGET_LL siminoutcgns)
ENDIF(USE_CGNS)

IF(USE_ENSIGHT)
  LIST(APPEND TARGET_LL siminensight)
ENDIF(USE_ENSIGHT)

LIST(APPEND TARGET_LL siminrefelems)

LIST(APPEND TARGET_LL simoutinfo)

TARGET_LINK_LIBRARIES(datainout ${TARGET_LL})
