IF(USE_XERCES) 
  INCLUDE_DIRECTORIES(${XERCES_INCLUDE_DIR}) 
ENDIF(USE_XERCES) 

IF(USE_LIBXML2)
  INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR}) 
ENDIF(USE_LIBXML2)


IF(USE_CGNS)
  INCLUDE_DIRECTORIES(${CGNS_INCLUDE_DIR})
ENDIF(USE_CGNS)

IF(WIN32)
#  IF(CFS_BLAS_LAPACK STREQUAL "MKL")
    message("Include dir MKL: ${MKL_INCLUDE_DIR}")
    INCLUDE_DIRECTORIES(${MKL_INCLUDE_DIR})
#  ENDIF()
ENDIF()

IF(NOT WIN32)
  IF(USE_BLAS_LAPACK STREQUAL "MKL")
    SET_SOURCE_FILES_PROPERTIES(Dependencies.cc
      PROPERTIES COMPILE_FLAGS "-I${MKL_INCLUDE_DIR} -fno-strict-aliasing")
  ENDIF(USE_BLAS_LAPACK STREQUAL "MKL")
ENDIF()
  
if(USE_BLAS_LAPACK STREQUAL "OPENBLAS")
  INCLUDE_DIRECTORIES(${OPENBLAS_INCLUDE_DIR})
endif()

SET(DATAINOUT_SRCS 
  ColoredConsole.cc
  PostProc.cc
  ProgramOptions.cc
  Dependencies.cc
  ResultHandler.cc
  SimState.cc
  SimInput.cc
  SimOutput.cc
  DefineInOutFiles.cc
)

ADD_LIBRARY(datainout STATIC ${DATAINOUT_SRCS})

set(TARGET_LL simouttext simoutinfo)

if(USE_STREAMING)
  list(APPEND TARGET_LL simoutstreaming)
endif()

LIST(APPEND TARGET_LL
  ${BOOST_LIBRARY}
  ${BZIP2_LIBRARY}
  ${ZIP_LIBRARY_SHARED}
  )


IF(USE_XERCES) 
  LIST(APPEND TARGET_LL ${XERCES_LIBRARY}) 
ENDIF(USE_XERCES) 

IF(USE_LIBXML2) 
  LIST(APPEND TARGET_LL ${LIBXML2_LIBRARY}) 
ENDIF(USE_LIBXML2) 

LIST(APPEND TARGET_LL
  ${LAPACK_LIBRARY}
  ${BLAS_LIBRARY}
  ${CFS_FORTRAN_LIBS} )

# ================

INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})

LIST(APPEND TARGET_LL simincdb)
LIST(APPEND TARGET_LL siminmesh)
LIST(APPEND TARGET_LL internalmesh)

IF(USE_GMV)
  LIST(APPEND TARGET_LL siminoutgmv)
ENDIF(USE_GMV)

IF(USE_GMSH)
  LIST(APPEND TARGET_LL siminoutgmsh)
ENDIF(USE_GMSH)

IF(USE_GIDPOST)
  LIST(APPEND TARGET_LL simoutgid)
ENDIF(USE_GIDPOST)

LIST(APPEND TARGET_LL simoutunv)

LIST(APPEND TARGET_LL siminouthdf5)

IF(USE_CGNS)
  LIST(APPEND TARGET_LL siminoutcgns)
ENDIF(USE_CGNS)

IF(USE_ENSIGHT)
  LIST(APPEND TARGET_LL siminensight)
ENDIF(USE_ENSIGHT)

IF(USE_EMBEDDED_PYTHON)
  LIST(APPEND TARGET_LL siminputpython)
ENDIF(USE_EMBEDDED_PYTHON)


LIST(APPEND TARGET_LL siminrefelems)

LIST(APPEND TARGET_LL simoutinfo)

#LIST(APPEND TARGET_LL datainout)

TARGET_LINK_LIBRARIES(datainout ${TARGET_LL})
