IF(USE_IPOPT)
  INCLUDE_DIRECTORIES(${IPOPT_INCLUDE_DIR})
ENDIF(USE_IPOPT)

IF(USE_XERCES)
  INCLUDE_DIRECTORIES(${XERCES_INCLUDE_DIR})
ENDIF(USE_XERCES)

IF(USE_LIBXML2)
  INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
ENDIF(USE_LIBXML2)  

SET(DOMAIN_SRCS 
  BCs.cc
  Domain.cc
  )

ADD_LIBRARY(domain STATIC ${DOMAIN_SRCS})

SET(TARGET_LL
  cfsgeneral
  mesh
  optimizer
  design
  coordsystems
  results
  pde
  coupledpde
  driver
  mathparser
  utils
# DIRTY, DIRTYYYY HACK! WHY?????
  datainout
  simouttext
  datainout
  ${MUPARSER_LIBRARY}
)

IF(USE_XERCES)
  SET(TARGET_LL ${TARGET_LL} ${XERCES_LIBRARY})
ENDIF(USE_XERCES)

IF(USE_LIBXML2)
  SET(TARGET_LL ${TARGET_LL} ${LIBXML2_LIBRARY})
ENDIF(USE_LIBXML2)  

TARGET_LINK_LIBRARIES(domain ${TARGET_LL})
