SET(FORMS_SRCS
  linearForm.cc
  PMLInt.cc
  fluidMechStiffInt.cc
  acouRHSLinForm.cc
  FlatShellStiffInt.cc
  mixedInt.cc
  linElastInt.cc
  nLinElastInt.cc
  mechStressStrain.cc
  PiezoStressStrain.cc
  fluidMechInt.cc
  magforceop.cc
  acouMechNcInt.cc
  baseForm.cc
  nLinPiezoMicro.cc
  linNeumannInt.cc
  massInt.cc
  linSurfStressInt.cc
  linThermoMechDampInt.cc
  nLincurlCurlNodeInt.cc
  FlatShellInt.cc
  nLinPiezoMicroRHS.cc
  nLinPiezoHystRHS.cc
  nLinHeatInt.cc
  smoothNLInt.cc
  baseForceOp.cc
  fluidMechMassInt.cc
  nonConformingInt.cc
  linMagStrictInt.cc
  nLincurlCurlEdgeInt.cc
  linThermoElecDampInt.cc
  linPiezoCoupling.cc
  linSurfForm.cc
  bdbInt.cc
  linStrainOp.cc
  nLinPiezoCoupling.cc
  acouPowerDensityOp.cc
  curlCurlNodeInt.cc
  nLinElecHystInt.cc
  nLinMagHystInt2D.cc
  linBiotSavartSurfInt.cc
  nLinPiezoHyst.cc
  laplaceInt.cc
  linPressureInt.cc
  abcInt.cc
  linThermoMechInt.cc
  FlatShellPiezoInt.cc
  FlatShellMassInt.cc
  gradfieldop.cc
  pierceInt.cc
  acouMechInt.cc
  curlCurlEdgeInt.cc
  nlinLaplaceInt.cc
  adbInt.cc
  nLinMassInt.cc
  FlatShellElecInt.cc
  linGradBDBInt.cc
  fluidMechShearStress.cc
  bdInt.cc
  linThermoElectricInt.cc
  curlfieldop.cc
  linViscoElastInt.cc
  smoothInt.cc
  pmlBasics.cc
  linHeatCondInt.cc
  elecchargeop.cc
  massEdgeInt.cc
  singleEntryInt.cc
  elecforceop.cc
  baseoperator.cc
  LatticeBoltzmannInt.cc
  )

ADD_LIBRARY(forms STATIC ${FORMS_SRCS})

TARGET_LINK_LIBRARIES(forms
  cfsgeneral
  coupledpde
  datainout
  design
  domain
  driver
  elements
  logging
  materials
  matvec
  paramh
  pde
  utils
)
